profile styling fixed to allow overlap from courses taken dropdown

--- a/acespace/frontend/src/styles/profile-styles.css
+++ b/acespace/frontend/src/styles/profile-styles.css
@@ -87,6 +87,7 @@ body {
 }
 
 .dropdown {
+    position: absolute;
     list-style: none;
     background-color: #000000;
     border-radius: 8px;
@@ -94,7 +95,7 @@ body {
     width: 35vmin;
     margin-left: 30vmin;
     margin-top: 1vmin;
-    max-height: 15vmin; /* Adjust the maximum height as needed */
+    max-height: 15vmin;
     overflow-y: auto;
 }
 
